--- a/app/globals.css
+++ b/app/globals.css
@@ -213,13 +213,12 @@
     }
     .home-hero-video-wrapper {
       display: block;
-      transform: translate(-50%, -285%);
+      transform: translate(-50%, -272%);
     }
     .footer-tablet {
       display: block;
-      padding-left: 20px;
-      padding-right: 20px;
-      box-sizing: border-box;
+      padding-left: 0;
+      padding-right: 0;
     }
   }
 
